update posts content